# pokedex

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  fetch_first_gen.sh
alexa-server/: Cargo.toml  package-lock.json  package.json  serverless.yml
alexa-server/redis-connection/src/: lib.rs
alexa-server/src/: main.rs
alexa_server/: Cargo.toml
config/: settings.json
data/: data_report.json  pokelist.json
pokedex-model/: Cargo.toml
pokedex-model/src/: lib.rs
python_src/: get_root_link.py  poke_fetcher.py
redis-connection/: Cargo.toml
redis-connection/src/: lib.rs
scraper/: Cargo.toml
scraper/config/: settings.json
scraper/data/: data_report.json  first_gen.html  root_html.html
scraper/python_src/: requirements.txt
scraper/src/: lib.rs  mongo.rs
src/: config.rs  lib.rs  model.rs  mongo.rs
src/rust_scraper/: Cargo.toml
src/rust_scraper/src/: config.rs  lib.rs  model.rs  mongo.rs  settings.json
src/scraper/: parse_pokemon.py  parse_root_html.py  settings.py
