[package]
name = "rust_scraper"
version = "0.1.0"
authors = ["Paolo Rechia <paolo@e-bot7.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
scraper = "0.12.0"
select = "0.5.0"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
mongodb = "1.1.1"
futures = "0.3.7"
model = { version = "0.1.0", path="../pokedex-model", package="pokedex-model" }

[lib]
name = "pokedex_scraper"
path = "src/lib.rs"
